--- a/src/app/dashboard/components/markets/markets.component.html
+++ b/src/app/dashboard/components/markets/markets.component.html
@@ -33,7 +33,7 @@
               [ngClass]="{'tabs__item--active': currencyDisplayMode === 'LOC','tab-no-active': currencyDisplayMode !== 'LOC'}"
               (click)="selectedTab('LOC')"
       >
-      LOC
+      {{'LOC' | translate}}
       </button>
       <button class="tabs__item"
               *ngIf="isAuthenticated"
@@ -247,7 +247,7 @@
     <div class="widget__search">
       <input class="widget__search-input"
              type="text" required=""
-             placeholder="Search"
+             placeholder="{{'Search' | translate}}"
              [ngModel]="searchInput"
              (input)="searchPair($event.target.value)">
       <span class="widget__input-img">
