--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -11,7 +11,7 @@
         <!-- <li class="footer__menu-item"><a class="footer__menu-link" href="#">Referral</a></li> -->
       </ul>
       <div class="footer__app-wrap">
-        <div class="footer__app-title" translate>Mobile applications<br>to launch in 2019:</div>
+        <div class="footer__app-title">{{'Mobile applications' | translate}}<br>{{'to launch in 2019:' | translate}}</div>
         <div class="footer__app-link-wrap">
           <a class="footer__app-link"><img class="footer__app-img" src="../../assets/img/g-play.svg" alt="google-display"></a>
           <a class="footer__app-link"><img class="footer__app-img" src="../../assets/img/app-store.svg" alt="app-store"></a>
