--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -150,7 +150,12 @@
           </ul>
         </div>
       </li>
-      <li class="menu__item">
+      <li class="menu__item" routerLinkActive="menu__link--active">
+        <a class="menu__link" routerLink="/news">
+          <span class="menu__link-text">{{'Partner news' | translate}}</span>
+        </a>
+      </li>
+          <li class="menu__item">
         <a class="menu__link" (click)="supportRedirect()" target="blank">
           <span class="menu__link-text">{{'News' | translate}}</span>
         </a>
