--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -75,3 +75,4 @@
 @import "pages/ieo/_ieo-header.scss";
 @import "pages/ieo/_ieo-notification.scss";
 @import "pages/ieo/_ieo-policy.scss";
+@import "pages/partner-news/_partner-news.scss";
